fix: adjust USP image proportion and hide scrollbar

--- a/src/index.css
+++ b/src/index.css
@@ -96,3 +96,11 @@
 .recharts-wrapper:focus {
   outline: none !important;
 }
+
+.hide-scrollbar::-webkit-scrollbar {
+  display: none;
+}
+.hide-scrollbar {
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */
+}
